--- a/PopcornApp/app/src/main/res/layout/view_scouts.xml
+++ b/PopcornApp/app/src/main/res/layout/view_scouts.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="#f4f4f4" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
 
+    <TextView
+        android:id="@+id/label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@+id/label"></TextView>
+    <!--   android:textSize="20px" -->
 
-    <ListView
-        android:id="@+id/lvExp"
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content"/>
-
-
-</LinearLayout>
+</LinearLayout> 
