--- a/PopcornApp/app/src/main/res/layout/activity_add_scout.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_add_scout.xml
@@ -5,7 +5,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.mis478.popcornapp.AddScout"
-    android:background="@color/BGColor">
+    android:background="@color/BGColor"
+    android:fillViewport="false"
+    android:id="@+id/a">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +30,7 @@
                     android:id="@+id/ScoutNumberLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Scout Name"
+                    android:text="Scout Number"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/TextColor"
                     android:paddingLeft="15dp" />
@@ -40,6 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
+                    android:maxLength="6"
                     android:inputType="textPersonName"
                     android:textColor="@color/TextColor"
                     android:nextFocusDown="@+id/user_name"
@@ -67,6 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:maxLength="7"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:textColor="@color/TextColor"
@@ -150,8 +154,8 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:textColor="@color/TextColor"
-                    android:nextFocusDown="@+id/price_progress"
-                    android:nextFocusRight="@id/price_progress"
+                    android:nextFocusDown="@+id/prize_progress"
+                    android:nextFocusRight="@id/prize_progress"
                     android:layout_column="2" />
             </TableRow>
 
@@ -163,13 +167,13 @@
                     android:id="@+id/priceprogresslabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Price Progress"
+                    android:text="Prize Progress"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/TextColor"
                     android:paddingLeft="15dp" />
 
                 <EditText
-                    android:id="@+id/price_progress"
+                    android:id="@+id/prize_progress"
                     style="@style/EditTextCubScoutTheme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -202,6 +206,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:id="@+id/den_number"
+                    android:maxLength="3"
                     android:textColor="@color/TextColor"
                     android:nextFocusDown="@+id/pass"
                     android:nextFocusRight="@id/pass"
@@ -229,6 +234,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:maxLength="3"
                     android:inputType="phone"
                     android:textColor="@color/TextColor"
                     android:nextFocusDown="@+id/total_sales"
@@ -340,7 +346,7 @@
                 android:layout_gravity="bottom|right"
                 android:clickable="true"
                 android:text="@string/next"
-                android:onClick="ToFinalize"/>
+                android:onClick="AddScout"/>
         </RelativeLayout>
 
 
