add scouts final

--- a/PopcornApp/app/src/main/res/layout/activity_add_scout.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_add_scout.xml
@@ -334,7 +334,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:onClick="ToProducts"/>
+                android:onClick="back"/>
 
             <Button
                 android:id="@+id/NextButton"
