--- a/PopcornApp/app/src/main/res/menu/menu_view_scouts.xml
+++ b/PopcornApp/app/src/main/res/menu/menu_view_scouts.xml
@@ -1,13 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="com.mis478.popcornapp.AddScout">
+    xmlns:tools="http://schemas.android.com/tools" tools:context="com.mis478.popcornapp.ViewScouts">
     <item android:id="@+id/DenLeaderMainMenu" android:title="Main Menu"
+        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/AddScoutMenu" android:title="Add Scout"
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/DenSalesTrackingMenu" android:title="Den Sales Tracking"
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/ViewProductsMenu" android:title="View Products"
-        android:orderInCategory="100" app:showAsAction="never" />
-    <item android:id="@+id/ViewScoutsMenu" android:title="View Scouts"
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/LogoutMenu" android:title="Logout"
         android:orderInCategory="100" app:showAsAction="never" />
