--- a/PopcornApp/app/src/main/res/layout/activity_scout_goal.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_scout_goal.xml
@@ -155,8 +155,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:text="Set Goal"
-                android:onClick="magic" />
+                android:onClick="magic"
+                android:text="Set Goal" />
         </TableRow>
     </GridLayout>
 
