--- a/PopcornApp/app/src/main/res/layout/activity_donation.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_donation.xml
@@ -87,33 +87,33 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="1"
-            android:paddingTop="40dp">
+            android:paddingTop="40dp"
+            android:weightSum="1">
 
             <Button
                 android:id="@+id/SalesModeBtn"
                 style="@style/ButtonCubScoutTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight=".2"
                 android:clickable="true"
                 android:onClick="Sales"
-                android:text="Back"
-                android:layout_weight=".2"/>
+                android:text="Back" />
 
 
             <Space
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".6"/>
+                android:layout_weight=".6" />
 
             <Button
                 android:id="@+id/CustomerInfo"
                 style="@style/ButtonCubScoutTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight=".2"
                 android:onClick="CustInfo"
-                android:text="Next"
-                android:layout_weight=".2"/>
+                android:text="Next" />
 
         </TableRow>
 
